{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 1624,
  "lineage": "f8a979ec-2d27-a9e9-9fa4-519c9671e2b6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cd_bastion_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0734dcc1975b20587",
            "association_id": "eipassoc-0a3cfd716492555d4",
            "domain": "vpc",
            "id": "eipalloc-0734dcc1975b20587",
            "instance": "i-021e2c055070ff70f",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-05371e22f5b5fdd6e",
            "private_dns": "ip-192-168-0-11.ap-northeast-2.compute.internal",
            "private_ip": "192.168.0.11",
            "public_dns": "ec2-54-180-216-144.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.216.144",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.cd_bastion",
            "aws_instance.web",
            "aws_internet_gateway.cd_ig",
            "aws_security_group.sg_alb",
            "aws_security_group.sg_bastion",
            "aws_security_group.sg_web",
            "aws_subnet.cd_priweb1",
            "aws_subnet.cd_pub1",
            "aws_vpc.cd_vpc",
            "time_sleep.wait_bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cd_ngw_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08571e1ad48722ece",
            "domain": "vpc",
            "id": "eipalloc-08571e1ad48722ece",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-164-141-254.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.141.254",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cd_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0263588f2531a56bd",
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:instance/i-021e2c055070ff70f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-cd",
            "id": "i-021e2c055070ff70f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05371e22f5b5fdd6e",
            "private_dns": "ip-192-168-0-11.ap-northeast-2.compute.internal",
            "private_ip": "192.168.0.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d3b8e1b1397fe2be",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a2c99ab49bb2ce5",
            "tags": {
              "Name": "cd-bastion"
            },
            "tags_all": {
              "Name": "cd-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08a3f1a20dc22c7a2"
            ]
          },
          "dependencies": [
            "aws_instance.web",
            "aws_security_group.sg_alb",
            "aws_security_group.sg_bastion",
            "aws_security_group.sg_web",
            "aws_subnet.cd_priweb1",
            "aws_subnet.cd_pub1",
            "aws_vpc.cd_vpc",
            "time_sleep.wait_bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0263588f2531a56bd",
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:instance/i-0d5c63f85d5fa6311",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d5c63f85d5fa6311",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-043429f3b5336bfaa",
            "private_dns": "ip-192-168-4-11.ap-northeast-2.compute.internal",
            "private_ip": "192.168.4.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0607bd3d0734e347a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0200a2e1b3d375db1",
            "tags": {
              "Name": "cd-was"
            },
            "tags_all": {
              "Name": "cd-was"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e82ba39f97a0c5b"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_bastion",
            "aws_security_group.sg_was",
            "aws_subnet.cd_priwas1",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0263588f2531a56bd",
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:instance/i-0473a7a982066cd9c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0473a7a982066cd9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00676c48d1d177045",
            "private_dns": "ip-192-168-2-11.ap-northeast-2.compute.internal",
            "private_ip": "192.168.2.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04174c0406c8fbd0d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0031c5f42f3f32954",
            "tags": {
              "Name": "cd-web"
            },
            "tags_all": {
              "Name": "cd-web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-008fc08e8e8b7a8f5"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_alb",
            "aws_security_group.sg_bastion",
            "aws_security_group.sg_web",
            "aws_subnet.cd_priweb1",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cd_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:internet-gateway/igw-017090bcf914c8e23",
            "id": "igw-017090bcf914c8e23",
            "owner_id": "730686915589",
            "tags": {
              "Name": "cd-ig"
            },
            "tags_all": {
              "Name": "cd-ig"
            },
            "vpc_id": "vpc-074600d50f20af521"
          },
          "dependencies": [
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "cd_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "cd-log-bucket1230",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730686915589:loadbalancer/app/cd-alb/a3233881be23c46c",
            "arn_suffix": "app/cd-alb/a3233881be23c46c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "cd-alb-2009149599.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:730686915589:loadbalancer/app/cd-alb/a3233881be23c46c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cd-alb",
            "security_groups": [
              "sg-00ce15477652c5508"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05462fde02b5e7b1e"
              },
              {
                "subnet_id": "subnet-08a2c99ab49bb2ce5"
              }
            ],
            "subnets": [
              "subnet-05462fde02b5e7b1e",
              "subnet-08a2c99ab49bb2ce5"
            ],
            "tags": {
              "Name": "cd-alb"
            },
            "tags_all": {
              "Name": "cd-alb"
            },
            "vpc_id": "vpc-074600d50f20af521",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_s3_bucket.cd_log_bucket",
            "aws_security_group.sg_alb",
            "aws_subnet.cd_pub1",
            "aws_subnet.cd_pub2",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "cd_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730686915589:loadbalancer/net/cd-nlb/4c6240924f5cee38",
            "arn_suffix": "net/cd-nlb/4c6240924f5cee38",
            "dns_name": "cd-nlb-4c6240924f5cee38.elb.ap-northeast-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:730686915589:loadbalancer/net/cd-nlb/4c6240924f5cee38",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "cd-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0031c5f42f3f32954"
              },
              {
                "subnet_id": "subnet-038af23e998e027c0"
              }
            ],
            "subnets": [
              "subnet-0031c5f42f3f32954",
              "subnet-038af23e998e027c0"
            ],
            "vpc_id": "vpc-074600d50f20af521",
            "zone_id": "ZIBE1TIR4HY56"
          },
          "dependencies": [
            "aws_subnet.cd_priweb1",
            "aws_subnet.cd_priweb2",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "cd_alblis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730686915589:listener/app/cd-alb/a3233881be23c46c/49ce7610ab867c4a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730686915589:targetgroup/cd-albtg/d5fd9d9072abb340",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:730686915589:listener/app/cd-alb/a3233881be23c46c/49ce7610ab867c4a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730686915589:loadbalancer/app/cd-alb/a3233881be23c46c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.cd_alb",
            "aws_lb_target_group.cd_albtg",
            "aws_s3_bucket.cd_log_bucket",
            "aws_security_group.sg_alb",
            "aws_subnet.cd_pub1",
            "aws_subnet.cd_pub2",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "cd_nlblis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730686915589:listener/net/cd-nlb/4c6240924f5cee38/dc946702ab61d2b2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730686915589:targetgroup/cd-nlbtg/121897a0be53f262",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:730686915589:listener/net/cd-nlb/4c6240924f5cee38/dc946702ab61d2b2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730686915589:loadbalancer/net/cd-nlb/4c6240924f5cee38",
            "port": 8080,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.cd_nlb",
            "aws_lb_target_group.cd_nlbtg",
            "aws_subnet.cd_priweb1",
            "aws_subnet.cd_priweb2",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "cd_albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730686915589:targetgroup/cd-albtg/d5fd9d9072abb340",
            "arn_suffix": "targetgroup/cd-albtg/d5fd9d9072abb340",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:730686915589:targetgroup/cd-albtg/d5fd9d9072abb340",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "cd-albtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-074600d50f20af521"
          },
          "dependencies": [
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "cd_nlbtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:730686915589:targetgroup/cd-nlbtg/121897a0be53f262",
            "arn_suffix": "targetgroup/cd-nlbtg/121897a0be53f262",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:730686915589:targetgroup/cd-nlbtg/121897a0be53f262",
            "lambda_multi_value_headers_enabled": false,
            "name": "cd-nlbtg",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-074600d50f20af521"
          },
          "dependencies": [
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cd_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08571e1ad48722ece",
            "connectivity_type": "public",
            "id": "nat-0f371469b22335c1e",
            "network_interface_id": "eni-095fcdec639482654",
            "private_ip": "192.168.0.33",
            "public_ip": "15.164.141.254",
            "subnet_id": "subnet-08a2c99ab49bb2ce5",
            "tags": {
              "Name": "cd-ngw"
            },
            "tags_all": {
              "Name": "cd-ngw"
            }
          },
          "dependencies": [
            "aws_eip.cd_ngw_ip",
            "aws_subnet.cd_pub1",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "192.168.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0121713a745817d353901788224",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0121713a745817d35",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0d3e654d9552efd99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cd_vpc",
            "aws_vpc.cd_vpc_peer",
            "aws_vpc_peering_connection.vpc_peering",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00904a49d8a9822a4179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00904a49d8a9822a4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0d3e654d9552efd99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cd_vpc",
            "aws_vpc.cd_vpc_peer",
            "aws_vpc_peering_connection.vpc_peering",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e3ad33c76f1cfa9c179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e3ad33c76f1cfa9c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0d3e654d9552efd99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cd_ig",
            "aws_route_table.cd_rt",
            "aws_vpc.cd_vpc",
            "aws_vpc.cd_vpc_peer",
            "aws_vpc_peering_connection.vpc_peering",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-039b06ce572135bcd179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039b06ce572135bcd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0d3e654d9552efd99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.cd_ngw_ip",
            "aws_nat_gateway.cd_ngw",
            "aws_route_table.cd_ngwrt",
            "aws_subnet.cd_pub1",
            "aws_vpc.cd_vpc",
            "aws_vpc.cd_vpc_peer",
            "aws_vpc_peering_connection.vpc_peering",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cd_ngwrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:route-table/rtb-039b06ce572135bcd",
            "id": "rtb-039b06ce572135bcd",
            "owner_id": "730686915589",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f371469b22335c1e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cd-ngwrt"
            },
            "tags_all": {
              "Name": "cd-ngwrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-074600d50f20af521"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.cd_ngw_ip",
            "aws_nat_gateway.cd_ngw",
            "aws_subnet.cd_pub1",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cd_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:route-table/rtb-0e3ad33c76f1cfa9c",
            "id": "rtb-0e3ad33c76f1cfa9c",
            "owner_id": "730686915589",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-017090bcf914c8e23",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cd-rt"
            },
            "tags_all": {
              "Name": "cd-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-074600d50f20af521"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cd_ig",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cd_igas_pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf538867f1ccf1b0",
            "route_table_id": "rtb-0e3ad33c76f1cfa9c",
            "subnet_id": "subnet-08a2c99ab49bb2ce5"
          },
          "dependencies": [
            "aws_internet_gateway.cd_ig",
            "aws_route_table.cd_rt",
            "aws_subnet.cd_pub1",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cd_igas_pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffe2d0001342ecbd",
            "route_table_id": "rtb-0e3ad33c76f1cfa9c",
            "subnet_id": "subnet-05462fde02b5e7b1e"
          },
          "dependencies": [
            "aws_internet_gateway.cd_ig",
            "aws_route_table.cd_rt",
            "aws_subnet.cd_pub2",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cd_ngwass_priwas1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e492a437687aa6e",
            "route_table_id": "rtb-039b06ce572135bcd",
            "subnet_id": "subnet-0200a2e1b3d375db1"
          },
          "dependencies": [
            "aws_eip.cd_ngw_ip",
            "aws_nat_gateway.cd_ngw",
            "aws_route_table.cd_ngwrt",
            "aws_subnet.cd_priwas1",
            "aws_subnet.cd_pub1",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cd_ngwass_priwas2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01388d378cec06fb9",
            "route_table_id": "rtb-039b06ce572135bcd",
            "subnet_id": "subnet-05e97ddb060756eac"
          },
          "dependencies": [
            "aws_eip.cd_ngw_ip",
            "aws_nat_gateway.cd_ngw",
            "aws_route_table.cd_ngwrt",
            "aws_subnet.cd_priwas2",
            "aws_subnet.cd_pub1",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cd_ngwass_priweb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9c57c637d8792cc",
            "route_table_id": "rtb-039b06ce572135bcd",
            "subnet_id": "subnet-0031c5f42f3f32954"
          },
          "dependencies": [
            "aws_eip.cd_ngw_ip",
            "aws_nat_gateway.cd_ngw",
            "aws_route_table.cd_ngwrt",
            "aws_subnet.cd_priweb1",
            "aws_subnet.cd_pub1",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cd_ngwass_priweb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0423a09c9abbc8aec",
            "route_table_id": "rtb-039b06ce572135bcd",
            "subnet_id": "subnet-038af23e998e027c0"
          },
          "dependencies": [
            "aws_eip.cd_ngw_ip",
            "aws_nat_gateway.cd_ngw",
            "aws_route_table.cd_ngwrt",
            "aws_subnet.cd_priweb2",
            "aws_subnet.cd_pub1",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:security-group/sg-00ce15477652c5508",
            "description": "sg for alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ce15477652c5508",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tomcat",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "cd-sg-alb",
            "name_prefix": "",
            "owner_id": "730686915589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cd-sg-alb"
            },
            "tags_all": {
              "Name": "cd-sg-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-074600d50f20af521"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:security-group/sg-08a3f1a20dc22c7a2",
            "description": "sg for bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a3f1a20dc22c7a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "jenkins",
                "from_port": 60010,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 60010
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cd-sg-bastion",
            "name_prefix": "",
            "owner_id": "730686915589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cd-sg-bastion"
            },
            "tags_all": {
              "Name": "cd-sg-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-074600d50f20af521"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:security-group/sg-0245e9c27f81cd3f6",
            "description": "sg for db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0245e9c27f81cd3f6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e82ba39f97a0c5b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "cd-sg-db",
            "name_prefix": "",
            "owner_id": "730686915589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cd-sg-db"
            },
            "tags_all": {
              "Name": "cd-sg-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-074600d50f20af521"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_bastion",
            "aws_security_group.sg_was",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:security-group/sg-0cfd40f883d2ac0be",
            "description": "security group for efs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cfd40f883d2ac0be",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e82ba39f97a0c5b"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "cd-sg-efs",
            "name_prefix": "",
            "owner_id": "730686915589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cd-sg-efs"
            },
            "tags_all": {
              "Name": "cd-sg-efs"
            },
            "timeouts": null,
            "vpc_id": "vpc-074600d50f20af521"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_bastion",
            "aws_security_group.sg_was",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_peer_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:security-group/sg-0715ff16f7452753f",
            "description": "sg for peer-db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0715ff16f7452753f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tomcat",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "web",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "ssh-bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a3f1a20dc22c7a2"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cd-sg-peer-db",
            "name_prefix": "",
            "owner_id": "730686915589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cd-sg-db"
            },
            "tags_all": {
              "Name": "cd-sg-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9c8b983ab6ad3ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_bastion",
            "aws_vpc.cd_vpc",
            "aws_vpc.cd_vpc_peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:security-group/sg-03e82ba39f97a0c5b",
            "description": "sg for was",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e82ba39f97a0c5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tomcat",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "web",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "ssh-bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a3f1a20dc22c7a2"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cd-sg-was",
            "name_prefix": "",
            "owner_id": "730686915589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cd-sg-was"
            },
            "tags_all": {
              "Name": "cd-sg-was"
            },
            "timeouts": null,
            "vpc_id": "vpc-074600d50f20af521"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_bastion",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:security-group/sg-008fc08e8e8b7a8f5",
            "description": "sg for web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008fc08e8e8b7a8f5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ssh-bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08a3f1a20dc22c7a2"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "web",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ce15477652c5508"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cd-sg-web",
            "name_prefix": "",
            "owner_id": "730686915589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cd-sg-web"
            },
            "tags_all": {
              "Name": "cd-sg-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-074600d50f20af521"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_alb",
            "aws_security_group.sg_bastion",
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cd_dbpeer1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:subnet/subnet-0a2eef3e48f24c210",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0a2eef3e48f24c210",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730686915589",
            "tags": {
              "Name": "cd-dbpeer1"
            },
            "tags_all": {
              "Name": "cd-dbpeer1"
            },
            "vpc_id": "vpc-0b9c8b983ab6ad3ed"
          },
          "dependencies": [
            "aws_vpc.cd_vpc_peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cd_dbpeer2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:subnet/subnet-012b90873e34afd62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-012b90873e34afd62",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730686915589",
            "tags": {
              "Name": "cd-dbpeer2"
            },
            "tags_all": {
              "Name": "cd-dbpeer2"
            },
            "vpc_id": "vpc-0b9c8b983ab6ad3ed"
          },
          "dependencies": [
            "aws_vpc.cd_vpc_peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cd_priwas1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:subnet/subnet-0200a2e1b3d375db1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-0200a2e1b3d375db1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730686915589",
            "tags": {
              "Name": "cd-priwas1"
            },
            "tags_all": {
              "Name": "cd-priwas1"
            },
            "vpc_id": "vpc-074600d50f20af521"
          },
          "dependencies": [
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cd_priwas2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:subnet/subnet-05e97ddb060756eac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.5.0/24",
            "id": "subnet-05e97ddb060756eac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730686915589",
            "tags": {
              "Name": "cd-priwas2"
            },
            "tags_all": {
              "Name": "cd-priwas2"
            },
            "vpc_id": "vpc-074600d50f20af521"
          },
          "dependencies": [
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cd_priweb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:subnet/subnet-0031c5f42f3f32954",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0031c5f42f3f32954",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730686915589",
            "tags": {
              "Name": "cd-priweb1"
            },
            "tags_all": {
              "Name": "cd-priweb1"
            },
            "vpc_id": "vpc-074600d50f20af521"
          },
          "dependencies": [
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cd_priweb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:subnet/subnet-038af23e998e027c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-038af23e998e027c0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730686915589",
            "tags": {
              "Name": "cd-priweb2"
            },
            "tags_all": {
              "Name": "cd-priweb2"
            },
            "vpc_id": "vpc-074600d50f20af521"
          },
          "dependencies": [
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cd_pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:subnet/subnet-08a2c99ab49bb2ce5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-08a2c99ab49bb2ce5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730686915589",
            "tags": {
              "Name": "cd-pub1"
            },
            "tags_all": {
              "Name": "cd-pub1"
            },
            "vpc_id": "vpc-074600d50f20af521"
          },
          "dependencies": [
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cd_pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:subnet/subnet-05462fde02b5e7b1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-05462fde02b5e7b1e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730686915589",
            "tags": {
              "Name": "cd-pub2"
            },
            "tags_all": {
              "Name": "cd-pub2"
            },
            "vpc_id": "vpc-074600d50f20af521"
          },
          "dependencies": [
            "aws_vpc.cd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cd_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:vpc/vpc-074600d50f20af521",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0698ccdcb44077bd4",
            "default_route_table_id": "rtb-00904a49d8a9822a4",
            "default_security_group_id": "sg-0be3bb644f4c2dcff",
            "dhcp_options_id": "dopt-8f430de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-074600d50f20af521",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00904a49d8a9822a4",
            "owner_id": "730686915589",
            "tags": {
              "Name": "cd-vpc"
            },
            "tags_all": {
              "Name": "cd-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cd_vpc_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:730686915589:vpc/vpc-0b9c8b983ab6ad3ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ece67a7d0080b4dd",
            "default_route_table_id": "rtb-0121713a745817d35",
            "default_security_group_id": "sg-02c26d55a091d97d0",
            "dhcp_options_id": "dopt-8f430de4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b9c8b983ab6ad3ed",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0121713a745817d35",
            "owner_id": "730686915589",
            "tags": {
              "Name": "cd-vpc_peer"
            },
            "tags_all": {
              "Name": "cd-vpc_peer"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0d3e654d9552efd99",
            "peer_owner_id": "730686915589",
            "peer_region": "ap-northeast-2",
            "peer_vpc_id": "vpc-074600d50f20af521",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "vpc-peering"
            },
            "tags_all": {
              "Name": "vpc-peering"
            },
            "vpc_id": "vpc-0b9c8b983ab6ad3ed"
          },
          "dependencies": [
            "aws_vpc.cd_vpc",
            "aws_vpc.cd_vpc_peer",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    }
  ]
}